k8s/apps/minecraft/force_1.12.2/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: public.ecr.aws/amazoncorretto/amazoncorretto:8-al2023-jre@sha256:5a85ce51fbf7df4a24011ad0ecbe83a0ecd517d974edf55b14abfdd43aeccbea
          workingDir: /app
          args:
            - java
            - -jar
            - forge-1.12.2-14.23.5.2860.jar
          ports:
            - containerPort: 25565
            - containerPort: 8123
          volumeMounts:
            - name: data
              mountPath: /app
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: data
          hostPath:
            path: /mnt/local/minecraft/forge_1.12.2
            type: Directory
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
